main : Fix a typo

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">e-Commerce Platform Developmen</a></h4>
+              <h4><a href="">e-Commerce Platform Development</a></h4>
               <p>Design and develop customized e-commerce platforms with user-friendly interfaces, secure payment gateways, and responsive designs.</p>
             </div>
           </div>
